--- a/index.html
+++ b/index.html
@@ -26,12 +26,243 @@
                          <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
                          <div class="nome">
                              <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
-                         </div>
                      </div>
-                 </div>
+
+                    </div>
+                </div>
+                     <div class="utente">
+                        <div class="inform-persona">
+                            <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
+                            <div class="nome">
+                                <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                        </div>
+              </div>
+         </div>
+
+            <div class="utenti">
+                <div class="utente">
+                    <div class="inform-persona">
+                        <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
+                        <div class="nome">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                    </div>
+
+                   </div>
+               </div>
+          </div>
+
+            <div class="utenti">
+                <div class="utente">
+                    <div class="inform-persona">
+                        <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
+                        <div class="nome">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                    </div>
+
+                   </div>
+               </div>
+          </div>
+
+            <div class="utenti">
+                <div class="utente">
+                    <div class="inform-persona">
+                        <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
+                        <div class="nome">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                    </div>
+
+                   </div>
+               </div>
+          </div>
+
+            <div class="utenti">
+                <div class="utente">
+                    <div class="inform-persona">
+                        <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
+                        <div class="nome">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                    </div>
+
+                   </div>
+               </div>
+          </div>
+
+            <div class="utenti">
+                <div class="utente">
+                    <div class="inform-persona">
+                        <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
+                        <div class="nome">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                    </div>
+
+                   </div>
+               </div>
+          </div>
+
+            <div class="utenti">
+                <div class="utente">
+                    <div class="inform-persona">
+                        <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
+                        <div class="nome">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                    </div>
+
+                   </div>
+               </div>
+          </div>
+
+            <div class="utenti">
+                <div class="utente">
+                    <div class="inform-persona">
+                        <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
+                        <div class="nome">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                    </div>
+
+                   </div>
+               </div>
+          </div>
+
+            <div class="utenti">
+                <div class="utente">
+                    <div class="inform-persona">
+                        <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
+                        <div class="nome">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                    </div>
+
+                   </div>
+               </div>
+          </div>
+
+            <div class="utenti">
+                <div class="utente">
+                    <div class="inform-persona">
+                        <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
+                        <div class="nome">
+                            <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                    </div>
+
+                   </div>
+               </div>
+          </div>
+
+          <div class="utenti">
+            <div class="utente">
+                <div class="inform-persona">
+                    <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
+                    <div class="nome">
+                        <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+                </div>
+
+               </div>
+           </div>
+      </div>
+
+      <div class="utenti">
+        <div class="utente">
+            <div class="inform-persona">
+                <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
+                <div class="nome">
+                    <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+            </div>
+
+           </div>
+       </div>
+  </div>
+
+  <div class="utenti">
+    <div class="utente">
+        <div class="inform-persona">
+            <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
+            <div class="nome">
+                <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+        </div>
+
+       </div>
+   </div>
+</div>
+
+<div class="utenti">
+    <div class="utente">
+        <div class="inform-persona">
+            <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
+            <div class="nome">
+                <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+        </div>
+
+       </div>
+   </div>
+</div>
+
+<div class="utenti">
+    <div class="utente">
+        <div class="inform-persona">
+            <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
+            <div class="nome">
+                <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+        </div>
+
+       </div>
+   </div>
+</div>
+
+<div class="utenti">
+    <div class="utente">
+        <div class="inform-persona">
+            <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
+            <div class="nome">
+                <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+        </div>
+
+       </div>
+   </div>
+</div>
+
+<div class="utenti">
+    <div class="utente">
+        <div class="inform-persona">
+            <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
+            <div class="nome">
+                <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+        </div>
+
+       </div>
+   </div>
+</div>
+
+<div class="utenti">
+    <div class="utente">
+        <div class="inform-persona">
+            <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
+            <div class="nome">
+                <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+        </div>
+
+       </div>
+   </div>
+</div>
+
+<div class="utenti">
+    <div class="utente">
+        <div class="inform-persona">
+            <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
+            <div class="nome">
+                <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
+        </div>
+
+       </div>
+   </div>
+</div>
+</div>
+</div>
+</main>
+
+
 
 
 </body>
+</html>
 
 
  
