creazione footer ma con alcuni problemi

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<!--inizio header-->
     <header>
         <div class="menu-superiore">
             <i id="speaker-view" class="fa-solid fa-table-cells">
@@ -17,27 +19,26 @@
 
         </div>
     </header>
-
-    <main>
-         <div class="container">
-             <div class="utenti">
-                 <div class="utente">
-                     <div class="inform-persona">
+<!--inizio partecipanti-->
+<main>
+    <div class="container">
+        <div class="utenti">
+            <div class="utente">
+                <div class="inform-persona">
                          <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
-                         <div class="nome">
+                            <div class="nome">
                              <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
-                     </div>
-
-                    </div>
+                            </div>
                 </div>
-                     <div class="utente">
-                        <div class="inform-persona">
-                            <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
+            </div>
+            <div class="utente">
+                <div class="inform-persona">
+                          <img src=https://picsum.photos/id/237/200/300 alt="profilo foto">
                             <div class="nome">
                                 <i class="fa-solid fa-microphone-slash"></i> Pinco Pallo
-                        </div>
-              </div>
-         </div>
+                            </div>
+                </div>
+            </div>
 
             <div class="utenti">
                 <div class="utente">
@@ -258,7 +259,40 @@
 </div>
 </main>
 
+<!--Fine partecipanti-->
+<!--Inizio Footer-->
+<footer>
+    <div class="left-footer">
+        <div class="mute"></div><i class="fa-solid fa-microphone"><br>Mute</i>
+        <i class="fa-solid fa-chevron-up"></i>
+        <div class="video"></div><i class="fa-solid fa-video"><br>Stop Video</i>
+        <i class="fa-solid fa-chevron-up"></i>
+    </div>
 
+    <div class="central-footer">
+        <div class="user-plus"></div><i class="fa-solid fa-user-plus"><br></i>Invite
+
+        <div class="user-group"></div><i class="fa-solid fa-user-group"><br></i>Manage Participiants
+
+        <div class="column"></div><i class="fa-solid fa-chart-column"></i>Polling
+
+        <div class="share-screen"></div><i class="fa-solid fa-share-from-square" style="color: #21dd00;"></i>Share Screen
+
+        <i class="fa-solid fa-chevron-up"></i>
+        <div class="chat"></div><i class="fa-regular fa-comment"></i>Chat
+
+        <div class="record"></div><i class="fa-solid fa-record-vinyl"></i>Record
+
+        <div class="square"></div><i class="fa-solid fa-table-cells-large"></i>Breakout Rooms
+
+        <div class="more"></div><i class="fa-solid fa-ellipsis"></i>More
+
+    </div>
+    <div class="right-footer">End Meeting
+
+    </div>
+
+</footer>
 
 
 </body>
