lavori in footer

--- a/index.html
+++ b/index.html
@@ -263,29 +263,39 @@
 <!--Inizio Footer-->
 <footer>
     <div class="left-footer">
-        <div class="mute"></div><i class="fa-solid fa-microphone"><br>Mute</i>
+        <div class="mute-class">
+            <div class="mute"></div><i class="fa-solid fa-microphone"><br>Mute</i>
+        </div>
+
         <i class="fa-solid fa-chevron-up"></i>
-        <div class="video"></div><i class="fa-solid fa-video"><br>Stop Video</i>
+
+        <div class="video-class">
+            <div class="video"></div><i class="fa-solid fa-video"><br>Stop Video</i>
+        </div>
+
         <i class="fa-solid fa-chevron-up"></i>
+
     </div>
 
     <div class="central-footer">
-        <div class="user-plus"></div><i class="fa-solid fa-user-plus"><br></i>Invite
 
-        <div class="user-group"></div><i class="fa-solid fa-user-group"><br></i>Manage Participiants
+            <div class="user-plus"><i class="fa-solid fa-user-plus"><br></i>Invite</div>
 
-        <div class="column"></div><i class="fa-solid fa-chart-column"></i>Polling
+        <div class="user-group"><i class="fa-solid fa-user-group"><br></i>Manage Participiants</div>
 
-        <div class="share-screen"></div><i class="fa-solid fa-share-from-square" style="color: #21dd00;"></i>Share Screen
+        <div class="column"><i class="fa-solid fa-chart-column"></i>Polling</div>
+
+        <div class="share-screen"><i class="fa-solid fa-share-from-square" style="color: #21dd00;"></i>Share Screen</div>
 
         <i class="fa-solid fa-chevron-up"></i>
-        <div class="chat"></div><i class="fa-regular fa-comment"></i>Chat
 
-        <div class="record"></div><i class="fa-solid fa-record-vinyl"></i>Record
+        <div class="chat"><i class="fa-regular fa-comment"></i>Chat</div>
 
-        <div class="square"></div><i class="fa-solid fa-table-cells-large"></i>Breakout Rooms
+        <div class="record"><i class="fa-solid fa-record-vinyl"></i>Record</div>
 
-        <div class="more"></div><i class="fa-solid fa-ellipsis"></i>More
+        <div class="square"><i class="fa-solid fa-table-cells-large"></i>Breakout Rooms
+        </div>
+        <div class="more"><i class="fa-solid fa-ellipsis"></i>More</div>
 
     </div>
     <div class="right-footer">End Meeting
