cambio scritta 'speaker view'

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 <!--inizio header-->
     <header>
         <div class="menu-superiore">
-            <i id="speaker-view" class="fa-solid fa-table-cells">
-                Speaker view
-            </i>
+            <i id="speaker-view" class="fa-solid fa-table-cells"></i>Speaker view
             <i id="arrow" class="fa-solid fa-maximize"></i>
 
         </div>
