--- a/index.html
+++ b/index.html
@@ -262,13 +262,13 @@
 <footer>
     <div class="left-footer">
         <div class="mute-class">
-            <div class="mute"></div><i class="fa-solid fa-microphone"><br>Mute</i>
+            <div class="mute"></div><i class="fa-solid fa-microphone"></i>Mute
         </div>
 
         <i class="fa-solid fa-chevron-up"></i>
 
         <div class="video-class">
-            <div class="video"></div><i class="fa-solid fa-video"><br>Stop Video</i>
+            <div class="video"></div><i class="fa-solid fa-video"></i>Stop Video
         </div>
 
         <i class="fa-solid fa-chevron-up"></i>
